--- a/css/style.css
+++ b/css/style.css
@@ -550,7 +550,7 @@ h1 {
 }
 
 .d-block {
-  display: block!important
+  display: block
 }
 
 @media (min-width:992px) {
@@ -1404,4 +1404,22 @@ h1, h2, h3, .h2, .h3, .h4 {
 .profpic {
   border-radius: 50%;
   width: 250px;
+}
+
+.inputbox {
+  font-size: inherit;
+  font-family: inherit;
+  border-radius: 5px;
+  max-width: 75%;
+  padding:10px;
+  margin:10px;
+}
+
+.whiteroundbox {
+  padding: 2px 10px;
+  margin-top: 15px;
+  border-radius: 5px;
+  background-color: white;
+  color: #232531 !important;
+  vertical-align: middle !important;
 }
